Fixed the drop content like list to not wrap

--- a/src/components/messageItem/MessageItem.css
+++ b/src/components/messageItem/MessageItem.css
@@ -62,6 +62,7 @@ ul {
   padding-right: 5px;
   margin: 1px;
   z-index: 1;
+  white-space: nowrap;
 }
 
 .dropdown:hover .dropdown-content {
